<resources>
    <string name="app_name">Nutrition Tracker</string>
    <string name="meal_categories">Meal categories</string>
    <string name="searchByMealName">Search meal by name</string>
    <string name="searchByIngredientName">Search meal by ingredient name</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="meals">Meals</string>
    <string name="ingredients">Ingredients</string>
    <string name="measures">Measures</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="sort">Sort</string>
    <string name="save">Save</string>
    <string name="dorucak">Dorucak</string>
    <string name="rucak">Rucak</string>
    <string name="uzina">Uzina</string>
    <string name="vecera">Vecera</string>
    <string name="selectDate">Selected date:</string>
    <string name="filter">Filter</string>
    <string name="pregledJela">Jela</string>
    <string name="statistika">Statistika</string>
    <string name="dodataJela">Broj dodatnih jela u prethodnih 7 dana</string>
    <string name="baza">Baza</string>
    <string name="api">API</string>
    <string name="pregled">Pregled</string>
    <string name="plan">Plan</string>
    <string name="select">Select</string>
    <string name="add">Add to plan</string>
    <string name="email">Send Email</string>
</resources>