<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="219dp"
        android:layout_height="143dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealName"
        tools:srcCompat="@tools:sample/avatars" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="59dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <RadioButton
            android:id="@+id/dorucak"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/dorucak" />

        <RadioButton
            android:id="@+id/uzina"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/uzina" />

        <RadioButton
            android:id="@+id/rucak"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/rucak" />

        <RadioButton
            android:id="@+id/vecera"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/vecera" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:text="@string/selectDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonDatePicker"
        style="?android:spinnerStyle"
        android:layout_width="224dp"
        android:layout_height="58dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonSaveMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="52dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDatePicker" />
</androidx.constraintlayout.widget.ConstraintLayout>