<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterMeals"
        android:layout_width="409dp"
        android:layout_height="259dp"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <ProgressBar
        android:id="@+id/loadingAnimation3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

    <EditText
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/filterByName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter" />

    <ImageButton
        android:id="@+id/prevButton"
        android:layout_width="62dp"
        android:layout_height="59dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterMeals" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="67dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/arrow_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterMeals" />

    <EditText
        android:id="@+id/filterByTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterByName" />

    <CheckBox
        android:id="@+id/sortiranje"
        android:layout_width="68dp"
        android:layout_height="37dp"
        android:layout_marginTop="4dp"
        android:text="@string/sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterByTag" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="335dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterByTag" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="407dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2">

        <RadioButton
            android:id="@+id/dorucak"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/dorucak" />

        <RadioButton
            android:id="@+id/uzina"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/uzina" />

        <RadioButton
            android:id="@+id/rucak"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/rucak" />

        <RadioButton
            android:id="@+id/vecera"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/vecera" />
    </RadioGroup>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="36dp"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/prevButton"
        app:layout_constraintTop_toBottomOf="@+id/filterMeals" />

</androidx.constraintlayout.widget.ConstraintLayout>